restructured react side of app. added functions to upload photos, configured interactive map to save visited states and retain information through use of local storage. add and delete journals. add and delete albums, and add and delete entries within the journals

--- a/capstone_flask/requirements.txt
+++ b/capstone_flask/requirements.txt
@@ -16,3 +16,27 @@ python-dotenv==0.19.2
 six==1.16.0
 SQLAlchemy==1.4.29
 Werkzeug==2.0.2
+alembic==1.7.5
+click==8.0.3
+colorama==0.4.4
+Flask==2.0.2
+Flask-Cors==3.0.10
+flask-file-upload==0.2.1
+Flask-Login==0.5.0
+flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
+Mako==1.1.6
+MarkupSafe==2.0.1
+marshmallow==3.14.1
+marshmallow-sqlalchemy==0.27.0
+psycopg2==2.9.3
+python-dotenv==0.19.2
+six==1.16.0
+SQLAlchemy==1.4.29
+Werkzeug==2.0.2
+WTForms==3.0.1
